# lume

./: .claudeignore  .gitignore  .hedl-tier  .pymarkdown.json  ADOPTERS.json  ADOPTERS.md  CLAUDE.md  README.md  RELEASING.md  conftest.py  lume  pyproject.toml  requirements-ci.txt
.claude/: settings.json  startup.sh
.claude-plugin/: marketplace.json
.claude/agents/: determinism-auditor.md  edge-case-hunter.md  existential-challenger.md  historian.md  review-dispatcher.md  scope-auditor.md  security-auditor.md  simplicity-enforcer.md
.claude/commands/: adversarial-review.md  iterate.md  phase-complete.md  pr-ready.md  start-session.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.work/: context.json  session.json  work.json
docs/: agent-boundaries.md  cli-requirements.md  constraints.md  data-architecture.md  orchestrator-design.md  questions.md  requirements.md  scope.md  security-requirements.md  vision.md
plugin/: README.md
tests/: conftest.py  test_accept_veto.py  test_adopters.py  test_artifact_schemas.py  test_check_verb.py  test_decisions_retro.py  test_discovery_reopen.py  test_dod_checks.py  test_gap.py  test_gap_scan.py  test_hierarchy.py  test_json_output.py  test_migrate.py  test_objective_json.py  test_plan_flip.py  test_release_tag.py  test_review_emit.py  test_review_ingest.py  test_seed.py  test_smoke_install.py  test_sqlite_backing.py  test_state.py  test_state_flip.py  test_validate.py  test_verbs.py  test_version_consistency.py  test_workstream_open.py
tools/: check_ci_workflow.py  check_release_tag.py  render_adopters.py
(+468 files in other folders)
